[gd_scene load_steps=4 format=3 uid="uid://c1qkkehrr7c66"]

[ext_resource type="Script" path="res://Resources/Building Resource & Groups/Root Building Scene/root_building.gd" id="1_5w68t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i2dct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xmgk"]

[node name="RootBuilding" type="Node2D"]
script = ExtResource("1_5w68t")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Build_Area_Selector" type="Area2D" parent="."]

[node name="Build_Area_Selector_Collider" type="CollisionShape2D" parent="Build_Area_Selector"]
shape = SubResource("CircleShape2D_i2dct")

[node name="Build_Restrictor" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 3
collision_layer = 2
collision_mask = 2

[node name="Build_Restrictor_Collider" type="CollisionShape2D" parent="Build_Restrictor"]
light_mask = 3
visibility_layer = 3
z_index = 1
shape = SubResource("RectangleShape2D_6xmgk")

[connection signal="area_entered" from="Build_Restrictor" to="." method="_on_build_restrictor_area_entered"]
